--- a/templates/index.html
+++ b/templates/index.html
@@ -1,55 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>Song Recommendations</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
-</head>
-
+{% include './components/header.html' %}
 <body>
-  <h1>Song Recommendations</h1>
-  <form id="emotion-form" action="{{ url_for('get_rec_songs') }}" method="GET">
-    <label for="emotion">Select an emotion:</label>
-    {% for key, value in emotion_dict.items() %}
-    <button name="emotion" value="{{ value }}" type="submit">{{ value }}</button>
-    {% endfor %}
-  </form>
-  <form id="emotion-webcam-form" action="{{ url_for('get_rec_songs') }}" method="GET">
-    <label for="emotion">Click "Start" to detect your facial expression:</label>
-    <button id="start-button" type="button" onclick="startWebcam()">Start</button>
-    <input type="hidden" id="emotion-input" name="emotion" value="">
-  </form>
-
-  <div class="emotion-detector" id="emotion-detector">
-    <h2 align="center" class="subtitle">Emotion Detector</h2>
-    <div class="video-container">
-    </div>
-  </div>
-
-  {% if rec_songs %}
-  {% if rec_songs['tracks'] %}
-  <h2>Recommendations for {{ emotion }} songs:</h2>
-  <ul id="rec-songs-list">
-    {% for track in rec_songs['tracks'] %}
-    <li>{{ track['name'] }} by {{ track['artists'][0]['name'] }}</li>
-    {% endfor %}
-  </ul>
-  {% else %}
-  <p>No track found.</p>
-  {% endif %}
-  {% else %}
-  <p>No list found.</p>
-  {% endif %}
-
-
+  {% include './components/form.html' %}
+  {% include './components/result.html' %}
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
-
-</html>
